# river-basin-sim

./: .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  NOTICE  README.md  pyproject.toml
data/: .gitkeep
docs/plans/: M0-foundation.md  M1-water-moves.md  M2-loop-closes.md  M3-real-scenarios.md  M4-fidelity-step.md  roadmap.md
pipeline/: __init__.py  _compat.py  condition.py  sources.md  test_pipeline.py  tile.py
scenarios/: README.md  demo_basin_rain.toml  river_reach.toml  river_reach_hllc.toml  spatial_fields.toml
scripts/: make_demo_fields.py  smoke_test.py
solver/: __init__.py  run.py  test_run.py
solver/core/: __init__.py  boundaries.py  friction.py  grid.py  hllc.py  local_inertial.py  massbalance.py  schemes.py  state.py  test_boundaries.py  test_local_inertial.py  test_massbalance.py  test_schemes.py
solver/io/: __init__.py  config.py  fields.py  provenance.py  status.py  test_config.py  test_fields.py  test_provenance.py  test_status.py  test_viewer_export.py  viewer_export.py  zarr_writer.py
solver/processes/: __init__.py  inflow.py  test_inflow.py
validation/: README.md  analytical.py  hllc1d.py  test_channel_flow.py  test_dam_break.py  test_ea_test2.py  test_ea_test3.py  test_hllc1d.py  test_hllc_2d.py  test_hllc_boundaries.py  test_hllc_wetdry.py
viewer/: README.md  project.godot
viewer/scenes/: results_view.tscn  terrain_view.tscn
viewer/scripts/: fetch_terrain3d.sh  results_player.gd  run_controller.gd  terrain_loader.gd  terrain_loader.gd.uid
viewer/shaders/: water_surface.gdshader
